# midicontrol-fw

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PROMPT.md  PROTOCOL.md  STM32G431CBTx_FLASH.ld  openocd.cfg  readme.md  tester.py  udev.rules
.cache/clangd/index/: audio.h.FC0594AE8E6D5927.idx  base.cpp.B6CAE383F5E59B27.idx  base.hpp.53898D2A26255F41.idx  bluetooth.cpp.5515B0B1893CD1A7.idx  bluetooth.hpp.E55E3918FA7BBBA3.idx  cdc.h.2560932AD5DD50E1.idx  cdc_device.c.215603AAFFE5832E.idx  cdc_device.h.9BC3FE888F5766BA.idx  cmsis_compiler.h.8176D437785EC076.idx  cmsis_gcc.h.E90A00CF1E23EC45.idx  cmsis_version.h.2F8D53AB033B839F.idx  codec.cpp.CE7549122B8A4E56.idx  codec.hpp.0EFD942C069BF84B.idx  comm.cpp.4E68C9E60819C406.idx  comm.hpp.6808A14501AAA4E9.idx  confirm_screen.cpp.20C018AF391CE88E.idx  confirm_screen.hpp.F7C10BBD6AC4DF20.idx  constants.hpp.2E96AD63CD4486A2.idx  core_cm4.h.CF5E7E4E43900ADF.idx  crc8.cpp.EB6E42C9A19ACCED.idx  crc8.hpp.17FD6E91998DFAA4.idx  dcd.h.C26F11180790BA26.idx  dcd_stm32_fsdev.c.7612AAFAFD75AFE2.idx  debug.cpp.6524EF42A23A8A09.idx  debug.hpp.36A104960202F3AB.idx  display.cpp.E2280B20671EFE90.idx  display.hpp.F151642D0359B6D9.idx  error.hpp.DDE9B3E08BAB0D6B.idx  font_11x18.cpp.5A439F6269EA8AC4.idx  font_7x10.cpp.22549FC2CFB4E565.idx  framebuffer.hpp.650269901358901D.idx  fsdev_stm32.h.53EEE994623F7508.idx  fsdev_type.h.24709815F97AEEF5.idx  git.hpp.97494DF49E19D445.idx  gpio.hpp.C35F4CC93B934846.idx  icon.hpp.B1B2A36E614D164C.idx  icons.cpp.EDBF8293B3DCA692.idx  input.hpp.E642CE35620E8B7C.idx  item.hpp.87288C56EDB7D8A9.idx  led.cpp.AF34394DA8C68ABA.idx  (+66 more)
cmake/: git.cmake  linker.cmake  stm32F0.cmake  stm32F1.cmake  stm32G4.cmake  stm32f0.cmake  stm32f1.cmake  stm32f4.cmake  stm32h7.cmake  toolchain-arm-none-eabi.cmake
inc/: base.hpp  ble.hpp  bluetooth.hpp  comm.hpp  debug.hpp  display.hpp  git.hpp  global.hpp  gpio.hpp  led.hpp  main.hpp  menu.hpp  midi.hpp  oled.hpp  oled_fonts.hpp  register.hpp  scheduler.hpp  settings.hpp  stmcpp-config.hpp  tusb_config.h  usb.h  usb.hpp
lib/libopencm3/lib/stm32/common/: dmamux.c
lib/protocol/inc/protocol/: codec.hpp  constants.hpp  crc8.hpp  parser.hpp  types.hpp
lib/protocol/src/: codec.cpp  crc8.cpp  parser.cpp
src/: base.cpp  ble.cpp  bluetooth.cpp  comm.cpp  debug.cpp  display.cpp  led.cpp  main.cpp  menu.cpp  midi.cpp  oled.cpp  oled_fonts.cpp  scheduler.cpp  settings.cpp  usb.c  usb.cpp  usb_descriptors.c
startup/: startup_stm32g431xx.s
